# job-raider

./: .gitignore  README.md  discover.example.yaml  discover.py  discover.yaml  discover_html.py  index.html  pyproject.toml  requirements.txt  results.json  run.py  searches.example.yaml  searches.yaml
.cursor/rules/: job-raider-scraping.mdc  job-raider-testing.mdc  python-coding-style.mdc
.github/workflows/: scrape.yml
_bmad-output/planning-artifacts/: architecture-job-raider-phase1.md  epics-and-stories-job-raider-phase1.md  prd-job-raider.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: cursor.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: architecture.md  configuration.md  results-schema.md
job_raider/: __init__.py  ai_filter.py  config.py  dedupe.py  exceptions.py  generate_dashboard.py  http_client.py  matching.py  merge.py  models.py  normalize.py  pipeline.py  render.py  robots.py  storage.py
job_raider/sources/: __init__.py  adapters.py  base.py  html_selectors.py  playwright_adapter.py  registry.py  rss.py
tests/: test_adapters_registry.py  test_ai_filter.py  test_config.py  test_dedupe.py  test_discover.py  test_discover_html.py  test_generate_dashboard.py  test_html_selectors.py  test_http_client.py  test_matching.py  test_merge.py  test_normalize.py  test_pipeline.py  test_pipeline_integration_rss.py  test_playwright_adapter.py  test_rss.py  test_run_cli.py  test_storage.py
tests/fixtures/: albo_pretorio.html  listing_absolute.html  listing_relative.html  sample_feed.xml
