[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "job-raider"
version = "0.1.0"
description = "Configurable Italian job/tender scraper with static HTML dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "requests>=2.28",
  "beautifulsoup4>=4.12",
  "feedparser>=6.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["job_raider*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
